Re_Structured the Models
Re_Structured the Models,
Registraiton is working
Login isn't working

--- a/bestbid/bidding/templates - Copy/bidding/navbar.html
+++ b/bestbid/bidding/templates - Copy/bidding/navbar.html
@@ -7,7 +7,7 @@
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Bid</a>
@@ -24,7 +24,7 @@
 			<button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
 		</form> -->
 		&nbsp;&nbsp;&nbsp;
-		<form class="form-inline my-2 my-lg-0" action="{% url 'loginUser' %}">
+		<form class="form-inline my-2 my-lg-0" action="../login">
 			<button class="btn btn-success my-2 my-sm-0">Login</button>
 		</form>
 		&nbsp;&nbsp;&nbsp;
